Slight styling issues and whitespace added

--- a/frontend/assets/stylesheets/scss/modules/_navigation.scss
+++ b/frontend/assets/stylesheets/scss/modules/_navigation.scss
@@ -34,6 +34,8 @@
             i {
                 color: #6d717e;
                 float: right;
+                top: 5px;
+                position: relative;
             }
 
             &:hover,
